src/main/view/src/App.css
html {
  overflow: hidden;
}

a {
  text-decoration: none;
}

.App {
  text-align: center;
  width: 100vw;
  height: 100vh;
  font: normal 14px "Noto Sans KR";
  background: #F6F8FC;
}

*{
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: text;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}
.custom-html-editor-container {
  border: none !important;
}
.custom-not-select {
  user-select: none;
  -drag: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
}

img {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
  user-drag: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#popover {
  z-index: 100;
  padding: 0;
}

#subMenu {
  margin-left: 8px !important;
}

.section {
  margin: 10px;
  box-sizing: border-box;
}

.section .section {
  margin-top: 0px;
  margin-right: 0px;
}

.dx-drawer:not(.dx-drawer-opened) .board:first-child {
  margin-left: 0px;
  width: 100%;
}

.dx-drawer.dx-drawer-opened div:not(.dx-state-invisible) .board:first-child {
  margin-left: 10px !important;
  width: calc(100% - 10px);
}

.dx-drawer-content {
  overflow: visible !important;
}

.dx-form-group {
  padding: 20px 0 20px 0
}

.szh-menu__item {
  content: '>';
  width: 80px;
  padding: 5px 8px;
}

.szh-menu__submenu > .szh-menu__item{
  content: '>';
}

#d3_tooltip {
  position: absolute;
  visibility: visible;
  z-index: 10;
  width: auto;
  height: auto;
  background: white;
  box-shadow: rgb(0 0 0 / 40%) 0px 0px 6px 0px;
  padding: 10px;
  transform: translate(-50%, -100%);
  font-size: 14px;
  font-family: 'Noto Sans KR';
}

#d3_tooltip p{
  margin-bottom: 0;
}

#d3_tooltip p + p{
  margin: 0;
}

.custom-scrollbar {
  background-image: linear-gradient(white, white);
  background-color: transparent;
  transition: background-color 0.3s ease;
}

.custom-scrollbar:hover {
  background-color: #babac0;
  transition: background-color 0.3s ease;
}

.custom-scrollbar::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

.custom-scrollbar::-webkit-scrollbar-button {
    width: 0;
    height: 0;
    display: none;
}  

.custom-scrollbar:hover {
  background-color: #babac0;
  transition: background-color 0.3s ease;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: inherit;
  border-radius: 8px;
  border: 3px solid transparent;
  background-clip: content-box;
  transition: background-color 0.3s ease;
}

.custom-scrollbar-container::-webkit-scrollbar {
  display: none;
}

.custom-scrollbar-container {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.custom-scrollbar::-webkit-scrollbar-thumb:active {
  background-color: #b0b0b8;
}

.liquid-selected {
  border: 2px dotted #b1b1b1;
}

/* 데이터하이라이트 삭제 버튼 */
.deleteHighlightBtn {
  cursor: pointer;
  width: 20px;
  height: 20px;
}

/* 데이터하이라이트 필수 정보 */
.requireRule {
  color: red;
}

/* TODO: 툴팁관련 공용컴포넌트 있으면 알려주세요.
*/
.ct-tooltip {
  position: relative;
  display: inline-block;
}

.ct-tooltip .ct-tooltiptext {
  margin-left: 20px;
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 2px 0px;
  text-overflow: ellipsis;

  /* Position the tooltip */
  position: fixed;
  z-index: 1;

}

.ct-tooltip:hover .ct-tooltiptext {
  visibility: visible;
}

.full-screen {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  padding: 10px 0px !important;
  background-color: #F6F8FC;
  z-index: 9999; /* Ensure it appears above other content */
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

